first section finished

--- a/index.html
+++ b/index.html
@@ -38,6 +38,113 @@
         </nav>
     </header>
 
+    <main class="banner-container">
+        <article class="artl-container">
+            <div class="artl-side-up"></div>
+            <span class="artl-sub-title">
+                WELCOME TO MY WORLD
+            </span>
+            <H1>HI, I AM <span class="h1-highlites">MARCOS URBISAGLIA A</span> WEB DEVELOPER<span
+                    class="h1-highlites">|</span> </H1>
+            <P>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident numquam, nobis tempore assumenda ab,
+                atque praesentium odio nemo esse ipsam cumque asperiores deserunt ea in id, et fugit pariatur dolores!
+            </P>
+
+            <div class="artl-side-down">
+                <div class="artl-foot-side">
+                    <div class="artl-foot-text">FIND WITH ME</div>
+                    <div class="artl-logos">
+                        <img src="images/linkedin.png" alt="">
+                        <img src="images/insta.png" alt="">
+                        <img src="images/fb.png" alt="">
+                    </div>
+                </div>
+                <div class="artl-foot-side">
+                    <div class="artl-foot-text">BEST SKILL ON</div>
+                    <div class="artl-logos">
+                        <img src="images/html5.png" alt="">
+                        <img src="images/css.png" alt="">
+                        <img src="images/psp.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </article>
+        <div class="profile-photo">
+            <img src="images/profile.jpg" alt="">
+        </div>
+    </main>
+
+    <section>
+        <div class="portfolio">
+            <div class="portfolio-text">
+                <span>VISIT MY PORTFOLIO AND KEEP YOUR FEEDBACK</span>
+                <H2>My Portfolio</H2>
+            </div>
+            <div class="portfolio-boxes">
+                <div class="box">
+                    <div class="box-up"><img src="images/development.jpg" alt="">
+                    </div>
+                    <div class="box-center">
+                        <div class="box-title-left">DEVELOPMENT</div>
+                        <div class="box-title-right">600</div>
+                    </div>
+                    <div class="box-down">The services provide for design</div>
+                </div>
+                <div class="box">
+                    <div class="box-up"><img src="images/development.jpg" alt="">
+                    </div>
+                    <div class="box-center">
+                        <div class="box-title-left">DEVELOPMENT</div>
+                        <div class="box-title-right">600</div>
+                    </div>
+                    <div class="box-down">The services provide for design</div>
+                </div>
+                <div class="box">
+                    <div class="box-up"><img src="images/development.jpg" alt="">
+                    </div>
+                    <div class="box-center">
+                        <div class="box-title-left">DEVELOPMENT</div>
+                        <div class="box-title-right">600</div>
+                    </div>
+                    <div class="box-down">The services provide for design</div>
+                </div>
+                <div class="box">
+                    <div class="box-up"><img src="images/development.jpg" alt="">
+                    </div>
+                    <div class="box-center">
+                        <div class="box-title-left">DEVELOPMENT</div>
+                        <div class="box-title-right">600</div>
+                    </div>
+                    <div class="box-down">The services provide for design</div>
+                </div>
+                <div class="box">
+                    <div class="box-up"><img src="images/development.jpg" alt="">
+                    </div>
+                    <div class="box-center">
+                        <div class="box-title-left">DEVELOPMENT</div>
+                        <div class="box-title-right">600</div>
+                    </div>
+                    <div class="box-down">The services provide for design</div>
+                </div>
+                <div class="box">
+                    <div class="box-up"><img src="images/development.jpg" alt="">
+                    </div>
+                    <div class="box-center">
+                        <div class="box-title-left">DEVELOPMENT</div>
+                        <div class="box-title-right">600</div>
+                    </div>
+                    <div class="box-down">The services provide for design</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <form action="">
+            
+        </form>
+    </section>
+
 </body>
 
 </html>
