--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Portfolio - Marcos Urbisaglia</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -37,6 +37,7 @@
 
         </nav>
     </header>
+
 
     <main class="banner-container">
         <article class="artl-container">
@@ -139,12 +140,129 @@
         </div>
     </section>
 
-    <section>
-        <form action="">
-            
-        </form>
+    <section class="container-resume">
+        <div class="container-resume-text">
+            <span>1 YEAR OF EXPERIENCE</span>
+            <h2>My Resume</h2>
+        </div>
+        <nav>
+            <ul class="nav-resume">
+                <li class="resume-li">Education</li>
+                <li class="resume-li">Professional skills</li>
+                <li class="resume-li">Experience</li>
+                <li class="resume-li">Interview</li>
+            </ul>
+        </nav>
+        <div class="container-articles">
+            <div class="article">
+                <span>2007-2010</span>
+                <h3>My Resume</h3>
+                <div class="card-texts">
+                    <h4>Prsonal Portfolio April Fools</h4>
+                    <div>
+                        <div class="subtitles-card">
+                            <div>University of DVI (1997-2001)</div>
+                            <div class="squad-details">
+                                4.30/5
+                            </div>
+                        </div>
+                        <p>The education should be very interactual, Ut tincidunt est ac dolor aliquam sodales.
+                            Phasellus sed mauris hendrerit,
+                            laoreet sem in, lobortis mauris hendrerit ante.
+                        </p>
+                    </div>
+                </div>
+                <div class="card-texts">
+                    <h4>Examples Of Personal Portfolio</h4>
+                    <div>
+                        <div class="subtitles-card">
+                            <div>University of DVI (1997-2001)</div>
+                            <div class="squad-details">
+                                4.30/5
+                            </div>
+                        </div>
+                        <p>Maecenas finibus nec sem ut imperdiet. Ut tincidunt est ac dolor aliquam sodales. Phasellus
+                            sed mauris hendrerit,
+                            Idoreet sem in, lobortis mauris hendrerit ante.
+                        </p>
+                    </div>
+                </div>
+                <div class="card-texts">
+                    <h4>Tips For Personal Portfolio</h4>
+                    <div>
+                        <div class="subtitles-card">
+                            <div>University of DVI (1997-2001)</div>
+                            <div class="squad-details">
+                                4.30/5
+                            </div>
+                        </div>
+                        <p>you are going to use a passage. Ut tincidunt est ac dolor aliquam sodales. Phasellus sed
+                            mauris hendrerit,
+                            laoreet sem in, lobortis mauris hendrerit ante.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="article">
+
+            </div>
+        </div>
     </section>
 
+
+
+
+    <section class="contact-container">
+        <div class="title-form-container">
+            <div class="title-form">CONTACT</div>
+            <h3>Contact with me</h3>
+        </div>
+        <div class="container-under-titles">
+            <div class="contact-card">
+                <div><img src="images/my-photo.jpg" alt=""></div>
+                <h4>Marcos Urbisaglia</h4>
+                <div>PERSONAL NUMBER</div>
+                <p>I am an available freelance worker. Connect with me via and call in to my account.</p>
+
+                <div>Phone: +3517514013</div>
+                <div>Email: marcos_urbi30@hotmail.com</div>
+                <div class="logos-contact">
+                    <div class="logos-img"><img src=",images/linkedin-logo.png" alt=""></div>
+                    <div class="logos-img"><img src=",images/logotipo-de-instagram.png" alt=""></div>
+                    <div class="logos-img"><img src=",images/facebook.png" alt=""></div>
+                </div>
+            </div>
+            <div>
+                <div class="form">
+                    <form action="">
+                        <div class="form-fist-line">
+                            <span class="text-form">
+                                YOUR NAME
+                            </span>
+                            <span class="text-form">
+                                PHONE NUMBER
+                            </span>
+                        </div>
+                        <div>
+                            <input type="text">
+                            <input type="text">
+                        </div>
+                        <span class="text-form">EMAIL</span>
+                        <input type="text">
+                        <span class="text-form">SUBJECT</span>
+                        <input type="text">
+                        <span class="text-form">YOUR MEASSEGE</span>
+                        <input type="text">
+                        <button>SEND MEASSEGE</button>
+
+
+                    </form>
+                </div>
+            </div>
+
+    </section>
+
+    <script src="app.js"></script>
 </body>
 
 </html>
