--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100;0,9..40,200;0,9..40,300;1,9..40,100;1,9..40,200;1,9..40,300&family=Montserrat:wght@200&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
-
 </head>
+
+<!-- Navegador -->
 
 <body>
     <header>
@@ -32,12 +33,12 @@
                 <button class="nav-btn">
                     BUY NOW
                 </button>
-
             </ul>
 
         </nav>
     </header>
 
+    <!-- Breve descripcion Banner -->
 
     <main class="banner-container">
         <article class="artl-container">
@@ -75,9 +76,64 @@
         </div>
     </main>
 
+    <!-- Features -->
+
+    <section class="features">
+        <div class="title-and-sub">
+            <span>FEATURES</span>
+            <H2>What i do</H2>
+        </div>
+        <div class="features-boxes">
+            <div class="box">
+                <div><img src="images/icons/menu-burguer.png" alt=""></div>
+                <h4>Business Stratagy</h4>
+                <p>Ehowmyset Gomn among the ol
+                    SIDes EV the streom os lie ciose to
+                    Ine eam</p>
+            </div>
+            <div class="box">
+                <div><img src="images/icons/libro.png" alt=""></div>
+                <h4>App Development</h4>
+                <p>ซมses o cictonory crover 200 lotn
+                    werds comeinec with d honctusof
+                    Thocel sentence</p>
+            </div>
+            <div class="box">
+                <div><img src="images/icons/pantalla.png" alt=""></div>
+                <h4>App Development</h4>
+                <p>Ehowmyset Gomn among the ol
+                    SIDes EV the streom os lie ciose to
+                    Ine eam</p>
+            </div>
+            <div class="box">
+                <div><img src="images/icons/talking.png" alt=""></div>
+                <h4>Mobile App</h4>
+                <p>Ehowmyset Gomn among the ol
+                    SIDes EV the streom os lie ciose to
+                    Ine eam</p>
+            </div>
+            <div class="box">
+                <div><img src="images/icons/wifi.png" alt=""></div>
+                <h4>CEO Marketing</h4>
+                <p>Ehowmyset Gomn among the ol
+                    SIDes EV the streom os lie ciose to
+                    Ine eam</p>
+            </div>
+            <div class="box">
+                <div><img src="images/icons/mandala.png" alt=""></div>
+                <h4>Personal Porfolio April</h4>
+                <p>Ehowmyset Gomn among the ol
+                    SIDes EV the streom os lie ciose to
+                    Ine eam</p>
+            </div>
+    </section>
+
+
+    <!-- Portfoilo -->
+
     <section>
         <div class="portfolio">
-            <div class="portfolio-text">
+            <div class="title-and-sub">
                 <span>VISIT MY PORTFOLIO AND KEEP YOUR FEEDBACK</span>
                 <H2>My Portfolio</H2>
             </div>
@@ -140,8 +196,10 @@
         </div>
     </section>
 
+    <!-- My Resume -->
+
     <section class="container-resume">
-        <div class="container-resume-text">
+        <div class="title-and-sub">
             <span>1 YEAR OF EXPERIENCE</span>
             <h2>My Resume</h2>
         </div>
@@ -155,8 +213,10 @@
         </nav>
         <div class="container-articles">
             <div class="article">
-                <span>2007-2010</span>
-                <h3>My Resume</h3>
+                <div class="title-and-sub-sub">
+                    <span>2007-2010</span>
+                    <h3>Education Quality</h3>
+                </div>
                 <div class="card-texts">
                     <h4>Prsonal Portfolio April Fools</h4>
                     <div>
@@ -181,7 +241,8 @@
                                 4.30/5
                             </div>
                         </div>
-                        <p>Maecenas finibus nec sem ut imperdiet. Ut tincidunt est ac dolor aliquam sodales. Phasellus
+                        <p>Maecenas finibus nec sem ut imperdiet. Ut tincidunt est ac dolor aliquam sodales.
+                            Phasellus
                             sed mauris hendrerit,
                             Idoreet sem in, lobortis mauris hendrerit ante.
                         </p>
@@ -203,19 +264,68 @@
                     </div>
                 </div>
             </div>
-            <div class="article">
 
+            <div class="article">
+                <div class="title-and-sub">
+                    <span>2007-2010</span>
+                    <h3>Job Experience</h3>
+                </div>
+                <div class="card-texts">
+                    <h4>Diploma in Web Development</h4>
+                    <div>
+                        <div class="subtitles-card">
+                            <div>University of DVI (1997-2001)</div>
+                            <div class="squad-details">
+                                4.30/5
+                            </div>
+                        </div>
+                        <p>Contrary to populor belief: Uruincidunt est ac dolor aliquam sodales, Phasellus sed
+                            mauris
+                            hendrerit, looreet. semin lobors maurs hendierit ante
+                        </p>
+                    </div>
+                </div>
+                <div class="card-texts">
+                    <h4>The Personal Portíolio Mystery</h4>
+                    <div>
+                        <div class="subtitles-card">
+                            <div>University of DVI (1997-2001)</div>
+                            <div class="squad-details">
+                                4.30/5
+                            </div>
+                        </div>
+                        <p>Generate Lorem Ipaum which looks, Ut tincidunt est oc dolor gliquam sodoles, Phasellus
+                            sed
+                            maurt enorerit coreet sem in, loborts mouns hendrerit ante.
+                        </p>
+                    </div>
+                </div>
+                <div class="card-texts">
+                    <h4>Diploma in Computer Science</h4>
+                    <div>
+                        <div class="subtitles-card">
+                            <div>University of DVI (1997-2001)</div>
+                            <div class="squad-details">
+                                4.30/5
+                            </div>
+                        </div>
+                        <p>you are going to use a passage. Ut tincidunt est ac dolor aliquam sodales. Phasellus sed
+                            mauris hendrerit,
+                            laoreet sem in, lobortis mauris hendrerit ante.
+                        </p>
+                    </div>
+                </div>
             </div>
+
         </div>
     </section>
 
-
-
+    <!-- Formulario -->
 
     <section class="contact-container">
-        <div class="title-form-container">
-            <div class="title-form">CONTACT</div>
-            <h3>Contact with me</h3>
+        <div class="title-and-sub-sub">
+            <span class="title-form">CONTACT</span>
+            <h2>Contact with me</h2>
         </div>
         <div class="container-under-titles">
             <div class="contact-card">
@@ -243,24 +353,28 @@
                                 PHONE NUMBER
                             </span>
                         </div>
-                        <div>
+                        <div class="input-first-line">
                             <input type="text">
                             <input type="text">
                         </div>
-                        <span class="text-form">EMAIL</span>
+                        <div class="text-form">EMAIL</div>
                         <input type="text">
-                        <span class="text-form">SUBJECT</span>
+                        <div class="text-form">SUBJECT</div>
                         <input type="text">
-                        <span class="text-form">YOUR MEASSEGE</span>
-                        <input type="text">
-                        <button>SEND MEASSEGE</button>
-
-
+                        <div class="text-form">YOUR MEASSEGE</div>
+                        <input type="text" class="input-comments">
+                        <div>
+                            <button class="send-btn">SEND MEASSEGE</button>
+                        </div>
                     </form>
                 </div>
             </div>
 
     </section>
+
+    <footer>
+
+    </footer>
 
     <script src="app.js"></script>
 </body>
