--- a/index.html
+++ b/index.html
@@ -328,46 +328,53 @@
             <h2>Contact with me</h2>
         </div>
         <div class="container-under-titles">
-            <div class="contact-card">
-                <div><img src="images/my-photo.jpg" alt=""></div>
-                <h4>Marcos Urbisaglia</h4>
-                <div>PERSONAL NUMBER</div>
-                <p>I am an available freelance worker. Connect with me via and call in to my account.</p>
 
-                <div>Phone: +3517514013</div>
-                <div>Email: marcos_urbi30@hotmail.com</div>
-                <div class="logos-contact">
-                    <div class="logos-img"><img src=",images/linkedin-logo.png" alt=""></div>
-                    <div class="logos-img"><img src=",images/logotipo-de-instagram.png" alt=""></div>
-                    <div class="logos-img"><img src=",images/facebook.png" alt=""></div>
+            <!-- left side -->
+
+            <div class="contact-card">
+                <div><img src="images/hands.jpg" alt=""></div>
+                <div class="under-image">
+                    <h4>Marcos Urbisaglia</h4>
+                    <div>PERSONAL NUMBER</div>
+                    <p>I am an available freelance worker. Connect with me via and call in to my account.</p>
+
+                    <div>Phone: +3517514013</div>
+                    <div>Email: marcos_urbi30@hotmail.com</div>
+                    <div class="find-me">FIND WITH ME</div>
+                    <div class="logos-contact">
+                        <div class="logos-img"><img src=",images/logos-black-png/facebook (1).png" alt=""></div>
+                        <div class="logos-img"><img src=",images/logos-black-png/linkedin (1).png" alt=""></div>
+                        <div class="logos-img"><img src=",images/logos-black-png/instagram.png" alt=""></div>
+                    </div>
                 </div>
             </div>
-            <div>
-                <div class="form">
-                    <form action="">
-                        <div class="form-fist-line">
-                            <span class="text-form">
-                                YOUR NAME
-                            </span>
-                            <span class="text-form">
-                                PHONE NUMBER
-                            </span>
-                        </div>
-                        <div class="input-first-line">
-                            <input type="text">
-                            <input type="text">
-                        </div>
-                        <div class="text-form">EMAIL</div>
+
+            <!-- right side -->
+
+            <div class="form">
+                <form action="">
+                    <div class="form-fist-line">
+                        <span class="text-form">
+                            YOUR NAME
+                        </span>
+                        <span class="text-form">
+                            PHONE NUMBER
+                        </span>
+                    </div>
+                    <div class="input-first-line">
                         <input type="text">
-                        <div class="text-form">SUBJECT</div>
                         <input type="text">
-                        <div class="text-form">YOUR MEASSEGE</div>
-                        <input type="text" class="input-comments">
-                        <div>
-                            <button class="send-btn">SEND MEASSEGE</button>
-                        </div>
-                    </form>
-                </div>
+                    </div>
+                    <div class="text-form">EMAIL</div>
+                    <input type="text">
+                    <div class="text-form">SUBJECT</div>
+                    <input type="text">
+                    <div class="text-form">YOUR MEASSEGE</div>
+                    <input type="text" class="input-comments">
+                    <div>
+                        <button class="send-btn">SEND MEASSEGE</button>
+                    </div>
+                </form>
             </div>
 
     </section>
