empezando medias queries

--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
     <!-- Features -->
 
     <section class="features">
-        <div class="title-and-sub">
+        <div class="title-and-sub-left">
             <span>FEATURES</span>
             <H2>What i do</H2>
         </div>
         <div class="features-boxes">
             <div class="box">
-                <div><img src="images/icons/menu-burguer.png" alt=""></div>
+                <div><img src="images/icons/menu-burger (1).png" alt=""></div>
                 <h4>Business Stratagy</h4>
                 <p>Ehowmyset Gomn among the ol
                     SIDes EV the streom os lie ciose to
@@ -337,7 +337,6 @@
                     <h4>Marcos Urbisaglia</h4>
                     <div>PERSONAL NUMBER</div>
                     <p>I am an available freelance worker. Connect with me via and call in to my account.</p>
-
                     <div>Phone: +3517514013</div>
                     <div>Email: marcos_urbi30@hotmail.com</div>
                     <div class="find-me">FIND WITH ME</div>
@@ -362,13 +361,13 @@
                         </span>
                     </div>
                     <div class="input-first-line">
-                        <input type="text">
-                        <input type="text">
+                        <input class="white-space" type="text">
+                        <input class="white-space" type="text">
                     </div>
                     <div class="text-form">EMAIL</div>
-                    <input type="text">
+                    <input class="white-space" type="text">
                     <div class="text-form">SUBJECT</div>
-                    <input type="text">
+                    <input class="white-space" type="text">
                     <div class="text-form">YOUR MEASSEGE</div>
                     <input type="text" class="input-comments">
                     <div>
@@ -380,7 +379,9 @@
     </section>
 
     <footer>
-
+            <div><img src="images/MY-PHOTO-EDIT.jpg" alt=""></div>
+            <span class="foot-up">INBIO</span>
+            <span class="foot-down">Rainbow-themes.</span>
     </footer>
 
     <script src="app.js"></script>
